# postloop-app-template

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  modal_app.py
.github/scripts/: get_modal_preview_url.py
.github/workflows/: ci.yml  preview-modal.yml  preview-railway-sweeper.yml  preview-railway.yml
backend/: pyproject.toml
backend/app/: main.py  models.py  preview.py  repository.py
backend/tests/: test_notes_api.py
demo/: preview-url-history.md  warm-preview-badge.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json
frontend/src/: App.tsx  index.css
frontend/tests/: notes.spec.ts
scripts/: cleanup_modal_previews.py  dev_backend.sh  dev_frontend.sh  ensure_mongodb.sh  railway_preview_e2e.sh  stop_mongodb.sh
